--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,26 +2,34 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+html::-webkit-scrollbar{
+   width:0px;
+   display: none;
+}
+html{
+  scroll-padding-top: 20px;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+#stories::-webkit-scrollbar{
+   width:0px;
+   display: none;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+@layer components{
+   .btn{
+       @apply h-7 hover:scale-125 transition-transform duration-200 ease-in-out cursor-pointer;
+   }
+}
+
+@font-face {
+   font-family: "Gotham Book";
+   src: url("./GothamBook.ttf");
+}
+
+*{
+   font-family: "Gotham Book",system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+div,section,main{
+   border:1px solid red;
 }
